syntax = "proto3";
package elysnetwork.elys.amm;

option go_package = "github.com/elys-network/elys/x/amm/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message PoolAsset {
  
  cosmos.base.v1beta1.Coin token = 1 [(gogoproto.nullable) = false]; 
  string weight = 2; 
}
